// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled row with switch 1`] = `
<View
  accessibilityLabel="Row with a switch in it!, Off"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Row with a switch in it!
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <RCTSwitch
          accessibilityRole="switch"
          disabled={true}
          identifier="test"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "height": 31,
              "width": 51,
            }
          }
          testID="test"
          title="Row with a switch in it!"
          value={false}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Render row with switch 1`] = `
<View
  accessibilityLabel="Row with a switch in it!, Off"
  accessibilityRole="switch"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Row with a switch in it!
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <RCTSwitch
          accessibilityRole="switch"
          identifier="test"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "height": 31,
              "width": 51,
            }
          }
          testID="test"
          title="Row with a switch in it!"
          value={false}
        />
      </View>
    </View>
  </View>
</View>
`;
